manifests/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
  namespace: gateway
spec:
  selector:
    app: envoy
  ports:
    - name: http
      port: 80
      targetPort: 8080
